--- a/app/views/logistics/inventory/inventory.html
+++ b/app/views/logistics/inventory/inventory.html
@@ -176,6 +176,9 @@
                           <th>{{ 'label.item.units' | translate }}</th>
                           <th>{{ 'label.item.unitprice' | translate }}</th>
                           <th style="text-align:center">{{ 'label.item.warranty' | translate }}</th>
+                          <th>Used Items</th>
+                          <th>Available Items</th>
+                          <th>Total Items</th>
 						</tr>
 					</thead>
              	 <tbody>
@@ -186,6 +189,9 @@
                 		<td class="pointer" data-ng-click="routeToitem(item.id)">{{item.units}}</td>
                 		<td class="pointer" data-ng-click="routeToitem(item.id)">{{item.unitPrice}}</td> 
                 		<td class="pointer" data-ng-click="routeToitem(item.id)" style="text-align:center">{{item.warranty}}</td> 
+                		<td class="pointer" data-ng-click="routeToitem(item.id)">{{item.usedItems}}</td>
+                		<td class="pointer" data-ng-click="routeToitem(item.id)">{{item.availableItems}}</td>
+                		<td class="pointer" data-ng-click="routeToitem(item.id)">{{item.totalItems}}</td>
              		</tr>
             	</tbody>
        			</table>
