--- a/app/views/logistics/inventory/grn/viewgrn.html
+++ b/app/views/logistics/inventory/grn/viewgrn.html
@@ -6,8 +6,8 @@
 	    </ul>
 	    <div class="pull-right">
 	      <div class="btn-group">
-	         <!--  <a href="#/editgrn/{{grn.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
-	          <a data-ng-click="deleteGrn()" class="btn btn-primary"><i class="icon-trash icon-white"></i> Delete</a> -->
+	         <a href="#/editgrn/{{grn.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
+	          <!--  <a data-ng-click="deleteGrn()" class="btn btn-primary"><i class="icon-trash icon-white"></i> Delete</a> -->
 	      </div>
 	    </div>
 	</div>
