--- a/app/views/system/viewdatatableentry.html
+++ b/app/views/system/viewdatatableentry.html
@@ -2,7 +2,8 @@
 <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
-		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">
+		{{error.code | translate:error.args}}-{{error.field}}</label>
 	    </div>
 	<div ng-show="isViewMode">
 		<h2>{{ 'label.view.datatable.entry' | translate }}</h2>
