--- a/app/views/system/makedatatableentry.html
+++ b/app/views/system/makedatatableentry.html
@@ -2,7 +2,8 @@
 <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
-		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">
+		{{error.code | translate:error.args}}-{{error.field}}</label>
 	    </div>
 	<fieldset>
 		<legend>{{ 'label.make.datatable.entry' | translate }}</legend>
@@ -34,11 +35,6 @@
                     </select>
                 </span>
             </div>
-			
-			<!-- <div class="controls">
-				<input type="text" ng-hide="columnHeader.columnDisplayType == 'CODELOOKUP'" ng-model="formData[columnHeader.columnName]">
-				<select ng-show="columnHeader.columnDisplayType == 'CODELOOKUP'" ng-model="formData[columnHeader.columnName]" ng-options="columnValue.id as columnValue.value for columnValue in columnHeader.columnValues" value="{{columnValue.id}}"></select>
-			</div> -->
 		</div>
 		<div class="offset5">
 			<a  id="cancel" class="btn" ng-click="cancel()">{{ 'button.cancel' | translate }}</a>
