in device sale tab showing serial no,in provision it screen(create and edit) Freeips button added and provisioning tab sentmessage button added

--- a/app/views/clients/createprovisioning.html
+++ b/app/views/clients/createprovisioning.html
@@ -88,7 +88,11 @@
 				<td width="70%">{{device}}</td>
 			</tr>
 		</table>
-	</div>			
+	</div>	
+	<div class="pull-right">
+        <a  href="" class="btn btn-primary" tooltip-placement="top" tooltip="To See Click on Me" ng-click="freeIpsPopupFun()">
+        		<i class="icon-list icon-white"></i>Free IPs</a>
+    </div>		
 	</div>
 			    <table>
 					<tr>
@@ -198,4 +202,31 @@
 		</div>
 	</fieldset>
 </form>
+
+<script type="text/ng-template" id="freeIps.html">
+                    <div class="modal-header silver">
+                        <h3 class="bolder">IP Details</h3>
+                    </div>
+                    <div class="modal-body modal-big">
+						<div class="span5">
+							<table width="100%" class="table table-striped table-bordered">
+								<thead>
+            						<tr class="graybg">
+             						   <th>Ip Address</th>
+               						   <th>Notes</th>
+           							</tr>
+        						</thead>
+       							 <tbody>
+    						        <tr  ng-repeat="ipAddressesData in ipAddressesData" >
+      							          <td >{{ipAddressesData.ip_address}}</td>
+             							  <td >{{ipAddressesData.notes}}</td>
+          						    </tr>
+        						 </tbody>
+							</table>
+						</div>	
+                    </div>
+                    <div class="modal-footer">
+                        <button id="cancel" class="btn btn-primary" ng-click="cancel()">{{'button.done' | translate}}</button>
+                    </div>
+ </script>
 </div>
