--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -675,6 +675,7 @@
 							 	<th>{{'table.heading.id' | translate}}</th>
 								<th>{{'table.heading.saledate' | translate}}</th>
 								<th>{{'table.heading.itemcode' | translate}}</th>
+								<th>{{'table.heading.serialNo' | translate}}</th>
 								<th>{{'table.heading.chargecode' | translate}}</th>
 								<th>{{'table.heading.quantity' | translate}}</th>
 								<th>{{'table.heading.totalprice' | translate}}</th>
@@ -689,6 +690,7 @@
 								<td class="pointer" data-ng-click="routeToItemSale(onetimesale.id,client.id)">{{onetimesale.id}}</td>
 								<td class="pointer" data-ng-click="routeToItemSale(onetimesale.id,client.id)">{{onetimesale.saleDate | DateFormat}}</a></td>
 								<td class="pointer" data-ng-click="routeToItemSale(onetimesale.id,client.id)">{{onetimesale.itemCode}}</a></td>
+								<td class="pointer" data-ng-click="routeToItemSale(onetimesale.id,client.id)">{{onetimesale.serialNo}}</a></td>
 								<td class="pointer" data-ng-click="routeToItemSale(onetimesale.id,client.id)">{{onetimesale.chargeCode}}</td>
 								<td class="pointer" data-ng-click="routeToItemSale(onetimesale.id,client.id)">{{onetimesale.quantity}}</td> 
 								<td class="pointer" data-ng-click="routeToItemSale(onetimesale.id,client.id)">{{onetimesale.totalPrice}}</td> 
