--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -1294,7 +1294,7 @@
 				    <td>{{ippoolData.notes}}</td>
 				   <td><a ng-click="sendIp(ippoolData.id)" popover="Check IpStatus" popover-trigger="mouseenter"><i class="icon-play icon-white"></i></a></td>
 				   <td ng-show="ipstatus && ipId==ippoolData.id "><i class="icon-stop {{ipstatus | StatusLookup}}"></i>&nbsp;{{ipstatus}}</td>
-				   <td></td>
+				   <td><a ng-click="approveUnallocate(ippoolData.ipAddress)"  popover="Unallocate Ip" popover-trigger="mouseenter"><i class=" icon-remove icon-white"></i></a></td>
 				</tr>
 			</tbody>
 		</table>
@@ -1434,6 +1434,23 @@
                         <button id="submit" class="btn btn-primary" ng-click="accept(start.date)" ng-disabled="flagapprove1">{{'label.confirm' | translate}}</button>
                     </div>
       </script>
+ <script type="text/ng-template" id="ApproveUnallocate.html">
+        <div class="modal-header silver">
+           <h3 class="bolder">{{'dialog.terminate.title.message' | translate}}</h3>
+       </div>
+       <div class="modal-body modal-big">
+         <div class="error" ng-show="errorStatus || errorDetails">
+		 		<label>{{'label.contract.error' | translate}}</label>
+				<label ng-show="errorStatus">{{errorStatus}}</label>
+				<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	      </div>
+            <h4>Are you sure?</h4>
+      </div>
+        <div class="modal-footer">
+                        <button id="cancel" class="btn btn-warning" ng-click="cancelReconnect()">{{'button.cancel' | translate}}</button>
+                       <button id="submit" class="btn btn-primary" ng-click="approveUnallocate()" ng-disabled="flagApproveTerminate">{{'label.confirm' | translate}}</button>
+       </div>
+      </script>  
       <script type="text/ng-template" id="StatementPop.html">
                     <div class="modal-header silver">
                         <h3 class="bolder">{{'dialog.statement.title.message' | translate}}</h3>
