--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -200,8 +200,8 @@
             
                <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
           <!--  <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button> -->
-               <button id="submit" ng-click="submit()" class="btn btn-primary" ng-show="todayDate==selectedDate">Save</button>
-               <button  ng-click="submitschedule()"  class="btn btn-primary" ng-hide="todayDate==selectedDate">Save Later</button>
+               <button id="submit" ng-click="submit()" class="btn btn-primary" ng-show="isnow">Save</button>
+               <button  ng-click="submitschedule()"  class="btn btn-primary" ng-hide="isnow">Save Later</button>
           </div>
               </td>
             </tr>
