--- a/app/views/clients/addclientdocument.html
+++ b/app/views/clients/addclientdocument.html
@@ -106,7 +106,7 @@
 		<div class="control-group">
 			<label class="control-label" for="file">{{'label.select.file' | translate}}<span class="required">*</span></label>
 			<div class="controls">
-				<input type="file" ng-file-select="onFileSelect($files)">
+				<input type="file" ng-file-select="onFileSelect($files)" required />
 			</div>
 		</div>
 
