--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -92,7 +92,7 @@
               <td>
            
              <accordion close-others="true">
-            	 <accordion-group is-open="postpaid.open" ng-click="postpaid.open=!postpaid.open">
+            	 <accordion-group is-open="postpaid.open">
              		<accordion-heading>
             	 		<strong>{{'label.postpaidplans' | translate}}</strong> 
             	 		<i class="pull-right" ng-class="{'icon-chevron-up': postpaid.open, 'icon-chevron-down': !postpaid.open}"></i>
