--- a/app/views/logistics/inventory/inventory.html
+++ b/app/views/logistics/inventory/inventory.html
@@ -5,7 +5,7 @@
       
       	 <tab heading="Item Details" select="getItemdetails()" ng-show="$parent.PermissionService.showMenu('READ_INVENTORY')">
         <div class="pull-right btn-group">
-          <a ng-show="PermissionService.showMenu('CREATE_INVENTORY')" href="#/createitemdetails/{{itemdetails.id}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'button.add' | translate }}</a>
+          <a ng-show="PermissionService.showMenu('CREATE_INVENTORY')" href="#/createitemdetails" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'button.add' | translate }}</a>
         </div>
        
         <div class="row-fluid">
