--- a/app/views/system/schedulerjobs.html
+++ b/app/views/system/schedulerjobs.html
@@ -21,7 +21,7 @@
         <thead>
             <tr class="graybg">
                 <th><input type="checkbox" ng-model="activeall" ng-true-value="true" ng-false-value="false"
-                     ng-click="selectAll(activeall)">{{'label.selectall' | translate}}</th>
+                     ng-change="selectAll(activeall)">{{'label.selectall' | translate}}</th>
                 <th>{{'table.heading.name' | translate}}</th>
                 <th>{{'table.heading.status' | translate}}</th>
                  <th>{{'table.heading.active' | translate}}</th>
@@ -37,10 +37,10 @@
         <tbody>
             <tr class="pointer-main" ng-repeat="job in jobs">
                 <td><input type="checkbox" ng-model="active" ng-true-value="true" ng-false-value="false"
-                     ng-click="runJobSelected(job, active)"></td>
+                     ng-change="runJobSelected(job, active)"></td>
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.displayName}}</td>
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.active}}</td>
-                <td><input type="checkbox" class="changeStatus" ng-model="job.active" id="changeStatus" ng-click="selectAll(job)"/></td>
+                <td><input type="checkbox" class="changeStatus" ng-model="job.active" id="changeStatus" ng-change="selectAll(job)"/></td>
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.nextRunTime}}</td>
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.lastRunHistory.jobRunEndTime}}</td>
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.lastRunHistory.status}}</td>
