--- a/app/views/system/ipPooling.html
+++ b/app/views/system/ipPooling.html
@@ -62,7 +62,7 @@
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.clientName}}</td>  
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.status}}</td>  
                 <td class="pointer" data-ng-click="routeTo(ippoolingdata.clientId)">{{ippoolingdata.notes}}</td>                                     
-              <td><a href="#/editippolling/{{ippoolingdata.id}}" ng-hide="ippoolingdata.status =='Assigned'" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>                                   
+              <td><a href="#/editippolling/{{ippoolingdata.id}}" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>                                   
    			</tr>
      		 </tbody>
           </table>
