--- a/app/views/clients/devicerental.html
+++ b/app/views/clients/devicerental.html
@@ -1,42 +1,19 @@
 <div  ng-controller="ClientOneTimeSaleController">
 	<div><ul class="breadcrumb">
-		<!-- <img ng-hide="imagePresent" src="../app/images/blank_avatar.jpg" alt="Avatar" width="40">
-    	<img ng-show="imagePresent" src="{{image}}" alt="Avatar" width="40">
-    	<li>
-          <h3>
-            &nbsp;
-            {{displayName}}
-            &nbsp;
-            <i class="icon-circle {{statusActive | StatusLookup}}"></i>
-            &nbsp;
-          </h3>
-        </li>
-        <li><span class="divider">|</span>
-          <i class="icon-barcode"></i>
-          <small>Uniquely identified  {{accountNo}}&nbsp;</small>
-        </li>
-        <li><span class="divider">|</span>
-          <i class="icon-building"></i>
-          <small>Office "{{officeName}}" </small>
-        </li>
-         <li><span class="divider">|</span>
-          <i></i>
-          <small>Balance {{balanceAmount}} &nbsp;{{currency}}</small>
-        </li> -->
-        <table>
-        <tr>
-        <td>
-        	 <img ng-hide="imagePresent" src="../app/images/blank_avatar.jpg" alt="Avatar" width="40">
-          <img ng-show="imagePresent" src="{{image}}" alt="Avatar" width="40">
-        </td>
-        <td>
-            <small style="color:black;">{{displayName}}</small>
-            &nbsp;
-            <i class="icon-circle {{statusActive | StatusLookup}}"></i>
-        </td>
-        <td><small style="font-size:30px;">|</small></td>
-        <td>
-        <table>
+	  <table>
+    	<tr>
+        	<td>	
+        		 <img ng-hide="imagePresent" src="../app/images/blank_avatar.jpg" alt="Avatar" width="40">
+          		<img ng-show="imagePresent" src="{{image}}" alt="Avatar" width="40">
+        	</td>
+        	<td>
+            	<small style="color:black;">{{displayName}}</small>
+            	&nbsp;
+            	<i class="icon-circle {{statusActive | StatusLookup}}"></i>
+        	</td>
+        	<td><small style="font-size:30px;">|</small></td>
+        	<td>
+      	<table>
         	<tr>
         		<td><small>Uniquely identified  {{accountNo}}</small></td>
         	</tr>
@@ -44,10 +21,10 @@
         		<td><i class="icon-building"></i><small>Office "{{officeName}}"</small></td>
         	</tr>
         </table>
-        </td>
-        <td><small style="font-size:30px;">|</small></td>
-        <td>
-        <table>
+       </td>
+        	<td><small style="font-size:30px;">|</small></td>
+        	<td>	
+        	<table>
         	<tr>
         		<td><small>Cell Phone {{phone}}</small></td>
         	</tr>
@@ -73,19 +50,21 @@
 		<ul class="breadcrumb">
 			<li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
 			<li><a href="#/viewclient/{{clientId}}">{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
-			<li class="active">{{'link.add.onetimesale' | translate}}</li>
+			<li class="active">{{'link.add.devicerental' | translate}}</li>
 		</ul>
 	</div>
-<form class="form-horizontal well" ng-submit="submit()">
+<form name="deviceRental" class="form-horizontal well" ng-submit="submit()">
 	 <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 	<fieldset>
-		<legend>New Sale</legend>
-		   <input ng-hide="true" name="saleType" ng-model="saleType"  ng-init="saleType='SALE'">
-
+		<legend>Device Renatal</legend>
+          <input ng-hide="true" name="saleType" ng-model="saleType"  ng-init="saleType='RENTAL'">
+            
+             <!-- <input name="card[description]" ng-model="card.description" value="Visa-4242"> -->
+            
 			<table>
 			<tr>
 				<td>
@@ -103,7 +82,7 @@
 							</td>
 							<td>
 								<div class="control-group">
-                        		<label class="control-label">{{ 'label.saleDate' | translate }}</label>
+                        		<label class="control-label">{{ 'label.rentaleDate' | translate }}</label>
                         		<div class="controls">
                             	<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.saleDate" is-open="opened2" min="minDate" max="maxDate" 
                             	date-disabled="disabled(date, mode)"  style="background-color:#FFFFFF;"  readonly/>
@@ -143,9 +122,9 @@
 							</td>
 							<td>
 								<div class="control-group">
-            					<label class="control-label" for="totalPrice">{{ 'label.totalPrice' | translate }}</label>
+            					<label class="control-label" for="totalPrice">{{ 'label.price' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="totalPrice" ng-model="formData.totalPrice" style="background-color:#FFFFFF;" readonly>
+              					<input type="text" id="totalPrice" ng-model="formData.totalPrice" value =0  style="background-color:#FFFFFF;" readonly>
             					</div>
           						</div>
 							</td>
@@ -162,12 +141,12 @@
           						</div>
           					</td>
           					<td>
-								<div class="control-group">
-            					<label class="control-label" for="unitPrice">{{ 'label.unitPrice' | translate }}</label>
-            					<div class="controls">
-              					<input type="text" id="unitPrice" ng-model="formData.unitPrice" style="background-color:#FFFFFF;" readonly>
-            					</div>
-          						</div>
+          						<div class="control-group">
+                                  <label class="control-label" for="contractPeriod">{{ 'label.contract' | translate }}</label>
+                                   <div class="controls">
+                                     <select   ng-disabled="formData.isPrepaid == 'Y'" ng-model="formData.contractPeriod"  ng-options="contractPeriod.id as contractPeriod.subscriptionPeriod for contractPeriod in contractPeriods" value="{{contractPeriod.id}}"></select>
+                                   </div>
+                                 </div>
 							</td>
 							</tr>
 							<tr>
