--- a/app/views/organization/editplan.html
+++ b/app/views/organization/editplan.html
@@ -110,6 +110,14 @@
            <table>
           <tr>
            <td width="50">
+            <div class="control-group">
+            <label class="control-label" for="isPrepaid">{{ 'label.plan.ishwreq' | translate }}</label>
+            <div class="controls">
+              <label class="checkbox">
+                <input type="checkbox" ng-model="formData.isHwReq">
+              </label>
+            </div>
+            </div>
               <div class="control-group">
             <label class="control-label" for="isPrepaid">{{ 'label.plan.isprepaid' | translate }}</label>
             <div class="controls">
@@ -147,8 +155,9 @@
               </div>
             </div>
           </div>
-          
-          
+          </td>
+           <td>
+          </div>
           </td>
           </tr>
           </table>
