--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -404,11 +404,31 @@
               </tr>
             </tbody>
           </table>
-          </div>
-   
-          
-          
-      </tab>
+          </div><br/>
+          <div class="pull-left">
+          <span class="input-append grpinputicons">
+                <input type="text" ng-model="parentClient" name="parentClient"  placeholder="Search by Parent #" 
+                       typeahead="parentClient.displayLabel as parentClient.displayLabel for parentClient  in getparent($viewValue) | limitTo:8" typeahead-min-length="0" />
+                   <a class="btn btn-primary" type="submit" ng-click="saveParent(parentClient)">save</a>
+        </span>
+        </div>
+          <table class="table" ng-show=parent.id>
+            <thead>
+              <tr class="graybg">
+                <th>ParentID</th>
+                <th>ParentName</th>
+                <th>ParentAccountno</th>
+              </tr>
+            </thead>
+            <tbody>
+             <tr class="pointer-main">
+                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.id}}</td>
+                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.displayName}}</td>
+                <td class="pointer" data-ng-click="routeToParentClient(parent.id)">{{parent.accountNo}}</td>
+            </tr>
+            </tbody>
+            </table>
+         </tab>
     <!--   <tab heading="{{'tab.templates' | translate}}" select="getClientTemplateDocuments()">
         <div class="span"></div>
         <div class="span2">
